--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 </head>
 <body>
     <h1>HOLAAAAAAAAAAAAAAA</h1>
+    <table style="border: 1px solid black;">
+        <tr>
+            <td>Fila 1 , c1</td>
+            <td>Fila 1 , c2</td>
+        </tr>
+        <tr>
+            <td>Fila 2 , c1</td>
+            <td>Fila 2 , c2</td>
+        </tr>
+    </table>
     
 </body>
 </html>
