cambie un valor de la tabla

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>HOLAAAAAAAAAAAAAAA</h1>
     <table style="border: 1px solid black;">
         <tr>
-            <td>Fila 1 , c1</td>
+            <td>Fila 1pene , c1</td>
             <td>Fila 1 , c2</td>
         </tr>
         <tr>
